Fix incorrect with of dropdown on Firefox

--- a/kifi-backend/modules/shoebox/angular/src/libraries/libraryHeader.styl
+++ b/kifi-backend/modules/shoebox/angular/src/libraries/libraryHeader.styl
@@ -278,6 +278,7 @@ followerPicDiam = 2.2em
   vertical-align: top
   margin-left: .8em
   position: relative
+  width: 33%
 
   menuGap = 2px
 
